--- a/AppCoder/Static/AppCoder/index.html
+++ b/AppCoder/Static/AppCoder/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static `AppCoder/css/bootstrap.min.css`%}" rel="stylesheet"/>
     <title>Home | AppCoder</title>
 </head>
 <body>
     
 </body>
 </html>
+#index gestiona los componentes, que son: estudiante, profesores, etc
